--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.backgroundImage {
+    background-image: url("./assets/chatBg.jpg");
+    background-size: cover;
+}
