--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,29 @@
 @tailwind utilities;
 
 .backgroundImage {
-    background-image: url("./assets/chatBg.jpg");
-    background-size: cover;
+  background-image: url("./assets/chatBg.jpg");
+  background-size: cover;
+}
+
+/* Message.css */
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.shake-animation {
+  animation: shake 0.5s ease-in-out;
 }
